completed step 6 http://cstructor.com/Home/SNotes?classId=49&sequence=520

--- a/final_proj/Formula1/Formula1App/Formula1App.csproj
+++ b/final_proj/Formula1/Formula1App/Formula1App.csproj
@@ -13,4 +13,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DriverRepository\DriverRepository.csproj" />
+  </ItemGroup>
+
 </Project>
